# meal-suggestion

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  deps.py  main.py
backend/app/models/: __init__.py  favourite.py  meal.py  meal_plan.py  user.py
backend/app/routers/: auth.py  favourites.py  ingredients.py  meal_plans.py  meals.py  suggestions.py  users.py
backend/app/schemas/: auth.py  ingredient.py  meal.py  meal_plan.py  suggestion.py  user.py
backend/app/services/: nutrition.py  openfoodfacts_client.py  security.py  suggestion_engine.py  themealdb_client.py
backend/app/workers/: celery_app.py  ingestion.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: error.tsx  layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/favourites/: page.tsx
frontend/app/(app)/meals/: loading.tsx  page.tsx
frontend/app/(app)/pantry/: page.tsx
frontend/components/meals/: MealCard.tsx  MealCardSkeleton.tsx  MealDetailPanel.tsx  MealGrid.tsx
frontend/components/profile/: ProfileForm.tsx
frontend/components/suggestions/: SuggestionFeed.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  input.tsx  label.tsx  page-header.tsx  select.tsx  skeleton.tsx
frontend/hooks/: useMeals.ts  useSuggestions.ts
frontend/lib/: api.ts  auth.ts  types.ts
(+5 files in other folders)
