[project]
name = "nutrisuggest-backend"
version = "1.0.0"
description = "NutriSuggest API — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "celery[redis]",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
